[package]
name = "arti-axum-railway"
description = "A demo project for running an Axum server behind an Arti onion service."
authors = ["Xevion"]
license = "MIT"
version = "0.3.0"
edition = "2021"
rust-version = "1.86.0"
homepage = "arti-railway-production.up.railway.app"
repository = "https://github.com/Xevion/arti-axum-railway"
documentation = "https://github.com/Xevion/arti-axum-railway/blob/master/README.md"
readme = "README.md"
categories = ["web", "proxy"]
keywords = ["tor", "onion", "service", "axum", "railway"]

[dependencies]
axum = { version = "0.8", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
regex = "1"
clap = { version = "4.5.48", features = ["derive"] }
